Set NULL to the ai_next pointer which fix cap_getaddrinfo(). Add regression test case.

PR:		195551
Submitted by:	Mikhail <mp39590@gmail.com>
Approved by:	pjd (mentor)

Former-commit-id: 8754b2c5007ff221f57c702d7c38fefef79f7c35